16/5/13
  Better ordering of windows when changing desktops

8/5/13
  Set desktop app opens on by name

7/4/13
  Swap master with two windows open

6/4/13
  Minimise config.h.def

10/3/13
  Combine move_left and move_right functions into move_sideways

7/3/13
  Check for a already running window manager

5/10/12
  Changed client_to_desktop to keep client values

25/9/12
  Fix window positioning in vertical
  Remove extra XUnmapWindow in client_to_desktop()

24/9/12
  Fix for existing window/s not being unmapped in fullscreem mode
    when new window opened
  Bar is toggled on a per desktop basis

21/9/12
  Fix for fullscreen app being too tall
  Add border to first opened window in stacking mode

9/8/12
  In vertical or horizontal mode can now add windows to the master area
    with keyboard shortcuts.

7/8/12
  Changed grid. First column and second window are resizable
  Fixed kill client and quit
  The order windows are focused in is remembered -
      makes a difference in stacking mode !
  Option to output info to stdout for use in bipolarbar etc.

29/6/12
  Don't allow unmanaged windows to be moved
  Quieter quit

27/4/12
  Added stacking mode

7/4/12
  Fix for transient windows going off the screen

25/3/12
  Fix for firefox menu disappearing after deleting an entry

7/3/12
  Multiple transient windows are handled properly now

6/3/12
  Added option to have new window at the top of the stack when using attach aside

28/2/12
  Removed remembering the last focused window

27/2/12
  If FOLLOW_MOUSE = 0 the cursor will be moved to the last focused window 
    when a window is removed or the desktop changed

26/2/12
  Added option to config to not have the panel shown if there's a window open

6/2/12
  Bugfixes. Fullscreen mode last window always mapped now.
  			tabbed firefox doesn't open empty windows on unfocused desktops
  			transient windows are always floating

9/1/12
  Master area is reset if second last window is removed

7/1/12