@@ -1,3 +1,6 @@
+10/4/14
+  Add locale so fonts in firefox and maybe others work
+
 16/5/13
   Better ordering of windows when changing desktops
 
